Update JMeter-directory-composition.md